[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/shoot/Impact.gd" type="Script" id=1]
[ext_resource path="res://player/shoot/Debris.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/shoot/bullet_impact.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ParticlesMaterial" id=2]
direction = Vector3( 0, 0, 1 )
spread = 15.0
initial_velocity = 25.0
initial_velocity_random = 0.5
scale_random = 0.1

[sub_resource type="SphereMesh" id=3]
radius = 0.01
height = 0.02
radial_segments = 4
rings = 1

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.01
bottom_radius = 0.02
height = 0.01
radial_segments = 32
rings = 1

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0.929412, 0.901961, 0.890196, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[node name="Impact" type="Position3D"]
script = ExtResource( 1 )
debris = ExtResource( 2 )

[node name="Particles" type="Particles" parent="."]
material_override = SubResource( 1 )
emitting = false
lifetime = 0.1
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Bullet" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="ImpactSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = -5.0
max_db = 0.0
autoplay = true

[node name="Position3D" type="Position3D" parent="."]

[node name="Position3D2" type="Position3D" parent="Position3D"]

[node name="ColorTween" type="Tween" parent="."]
